# chambers-cardiacdevice

./: ISSUES_CIED_TELEMETRY_SIMULATOR.md  PRD_CIED_TELEMETRY_SIMULATOR.md  README.md  chamber_sentinel_medical_devices_v3.docx  chamber_sentinel_medical_devices_v4.md
chamber-sentinel-cied-sim/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
chamber-sentinel-cied-sim/.github/workflows/: generate-templates.yml
chamber-sentinel-cied-sim/docs/: opencarp-integration.md
chamber-sentinel-cied-sim/docs/architecture/: chambers_arch_flow.mermaid  current_arch_flow.mermaid
chamber-sentinel-cied-sim/scripts/: demo.py  validate_templates.py
chamber-sentinel-cied-sim/src/: orchestrator.py
chamber-sentinel-cied-sim/src/analytics/: __init__.py  adverse_event_impact.py  attack_surface.py  clinical_availability.py  comparator.py  persistence_tracker.py  regulatory_compliance.py
chamber-sentinel-cied-sim/src/api/: main.py
chamber-sentinel-cied-sim/src/api/routes/: analytics.py  chambers.py  patients.py  scenarios.py  simulation.py
chamber-sentinel-cied-sim/src/api/websockets/: stream.py
chamber-sentinel-cied-sim/src/chamber_sentinel_cied_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
chamber-sentinel-cied-sim/src/chambers_arch/burn/: hold_manager.py  policies.py  scheduler.py  verifier.py
chamber-sentinel-cied-sim/src/chambers_arch/consent/: consent_manager.py  election_manager.py
chamber-sentinel-cied-sim/src/chambers_arch/portable_record/: fhir_exporter.py
chamber-sentinel-cied-sim/src/chambers_arch/relay/: delivery_tracker.py  ephemeral_store.py  processor.py
chamber-sentinel-cied-sim/src/chambers_arch/worlds/: base_world.py  clinical_world.py  device_maintenance_world.py  patient_world.py  research_world.py  safety_investigation_world.py
chamber-sentinel-cied-sim/src/config/: __init__.py  device_profiles.yaml  models.py  patient_profiles.yaml  scenario_definitions.yaml  settings.py
chamber-sentinel-cied-sim/src/current_arch/layers/: aggregate_pool.py  (+4 more)
chamber-sentinel-cied-sim/src/generator/: cohort.py  stream.py
chamber-sentinel-cied-sim/tests/unit/: test_egm_mode_b.py  test_orchestrator.py  test_template_library.py
(+4583 files in other folders)
