[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chamber-sentinel-cied-sim"
version = "0.1.0"
description = "Chamber Sentinel CIED Telemetry Simulator — burn-by-default vs persist-by-default architecture comparison"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Chamber Sentinel Project" },
]
keywords = ["cardiac", "pacemaker", "CIED", "telemetry", "simulation", "privacy", "data-sovereignty"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "redis>=5.0",
    "celery>=5.3",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "httpx>=0.26",
]

[project.optional-dependencies]
viz = [
    "plotly>=5.18",
    "dash>=2.14",
    "dash-bootstrap-components>=1.5",
    "weasyprint>=61",
    "jinja2>=3.1",
]
dev = [
    "ruff>=0.2",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "types-PyYAML>=6.0",
    "types-redis>=4.6",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.92",
    "faker>=22.0",
]
all = [
    "chamber-sentinel-cied-sim[viz,dev,test]",
]

[project.scripts]
cied-sim = "src.api.main:run"
cied-demo = "scripts.demo:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["src/visualization/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
